*** empty log message ***

--- a/gxemul-legacy/trunk/RELEASE.html
+++ b/gxemul-legacy/trunk/RELEASE.html
@@ -10,7 +10,7 @@
 
 <!--
 
-$Id: RELEASE.html,v 1.1 2007-06-23 16:59:35 debug Exp $
+$Id: RELEASE.html,v 1.2 2007-06-23 17:04:18 debug Exp $
 
 Currently working on what will become release 0.5.0.
 
@@ -28,8 +28,9 @@ run inside the emulator, as if they were running on real hardware.
 
 <p>The emulator emulates (networks of) real machines. The machines may 
 consist of ARM, MIPS, PowerPC, and SuperH processors, and various 
-surrounding hardware components such as framebuffers, interrupt 
-controllers, busses, disk controllers, and serial port controllers.
+surrounding hardware components such as framebuffers, busses, interrupt 
+controllers, ethernet controllers, disk controllers, and serial port 
+controllers.
 
 <p>The documentation lists the machines and guest operating systems that 
 can be regarded as "working" in GXemul. The best working guest operating 
