--- a/gxemul-legacy/trunk/RELEASE.html
+++ b/gxemul-legacy/trunk/RELEASE.html
@@ -8,14 +8,7 @@
 <font color="#000000" size="6"><b>Release notes</b>
 </font></td></tr></table></td></tr></table><p>
 
-<!--
-
-$Id: RELEASE.html,v 1.2 2007-06-23 17:04:18 debug Exp $
-
-Currently working on what will become release 0.5.0.
-
--->
-
+<!--  $Id: RELEASE.html,v 1.3 2007-06-23 17:06:23 debug Exp $  -->
 
 <h2>Release notes for GXemul 0.5.0</h2>
 
