Removing everything related to native code generation.

--- a/gxemul-legacy/trunk/RELEASE.html
+++ b/gxemul-legacy/trunk/RELEASE.html
@@ -8,13 +8,15 @@
 <font color="#000000" size="6"><b>Release notes</b>
 </font></td></tr></table></td></tr></table><p>
 
-<!--  $Id: RELEASE.html,v 1.5 2007-06-23 17:26:09 debug Exp $  -->
+<!--  $Id: RELEASE.html,v 1.6 2007-06-28 13:36:45 debug Exp $  -->
+
 
 <h2>Release notes for GXemul 0.5.0</h2>
 
 <p><i>Copyright (C) 2003-2007  Anders Gavare</i>
 
-<p>GXemul is a framework for full-system computer architecture emulation. 
+
+<p><br>GXemul is a framework for full-system computer architecture emulation. 
 Several processor architectures and machine types have been implemented. 
 It is working well enough to allow <a href="doc/guestoses.html">unmodified
 "guest" operating systems to run inside the emulator</a>,
@@ -26,7 +28,8 @@ surrounding hardware components such as framebuffers, busses, interrupt
 controllers, ethernet controllers, disk controllers, and serial port 
 controllers.
 
-<p>The documentation lists the machines and guest operating systems that 
+<p>The <a href="doc/index.html">documentation</a> lists the machines and
+guest operating systems that 
 can be regarded as "working" in GXemul. The best working guest operating 
 systems are <a href="doc/guestoses.html#netbsdpmaxinstall">NetBSD/pmax</a>
 and <a href="doc/guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
@@ -40,15 +43,15 @@ and <a href="doc/guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
 
 </ul>
 
-<p>Please read the HISTORY file for more details.
+<p>Please read the <a href="HISTORY">HISTORY</a> file for more details.
 
 
 <p><br>Files included in this release are:<pre>
-    HISTORY                       Detailed revision history / changelog.
-    LICENSE                       Copyright message / license.
-    README                        Quick start instructions, for the impatient.
+    <a href="HISTORY">HISTORY</a>                       Detailed revision history / changelog.
+    <a href="LICENSE">LICENSE</a>                       Copyright message / license.
+    <a href="README">README</a>                        Quick start instructions, for the impatient.
     RELEASE.html                  This file.
-    TODO                          TODO notes.
+    <a href="TODO">TODO</a>                          TODO notes.
     configure, Makefile.skel      sh and make scripts for building GXemul.
     <a href="demos/">demos/</a>                        Tutorial-like demos of testmachine functionality.
     <a href="doc/">doc/</a>                          Documentation.
