--- a/gxemul-legacy/trunk/RELEASE.html
+++ b/gxemul-legacy/trunk/RELEASE.html
@@ -1,14 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Gavare's eXperimental Emulator:&nbsp;&nbsp;&nbsp;Release notes</title>
 <meta name="robots" content="noarchive,nofollow,noindex"></head>
 <body bgcolor="#f8f8f8" text="#000000" link="#4040f0" vlink="#404040" alink="#ff0000">
 <table border=0 width=100% bgcolor="#d0d0d0"><tr>
 <td width=100% align=center valign=center><table border=0 width=100%><tr>
 <td align="left" valign=center bgcolor="#d0efff"><font color="#6060e0" size="6">
-<b>GXemul:</b></font>&nbsp;&nbsp;
-<font color="#000000" size="6"><b>Release notes</b>
+<b>GXemul:</b></font>&nbsp;&nbsp;<font color="#000000" size="6"><b>Release notes</b>
 </font></td></tr></table></td></tr></table><p>
 
-<!--  $Id: RELEASE.html,v 1.9 2007-11-04 06:32:48 debug Exp $  -->
+<!--  $Id: RELEASE.html,v 1.10 2007-11-12 08:32:10 debug Exp $  -->
 
 
 <h2>Release notes for GXemul 0.4.6.1</h2>
@@ -128,12 +128,12 @@ this is in order:<pre>
 
     This product includes software developed by Charles M. Hannum.
 
-    This product includes software developed under <a href="http://www.openbsd.org/">OpenBSD</a> by Per Fogelström.
+    This product includes software developed under <a href="http://www.openbsd.org/">OpenBSD</a> by Per FogelstrÃ¶m.
 
-    This product includes software developed by Per Fogelström.
+    This product includes software developed by Per FogelstrÃ¶m.
 
     This product includes software developed at Ludd, University of
-    Luleå, Sweden and its contributors.
+    LuleÃ¥, Sweden and its contributors.
 
     This product includes software developed by Hellmuth Michaelis
     and Joerg Wunsch
