Preparing for a 0.4.7.1 release.

--- a/gxemul/branches/gxemul-0.4.7/RELEASE.html
+++ b/gxemul/branches/gxemul-0.4.7/RELEASE.html
@@ -10,7 +10,7 @@
 
 
 
-<h2>Release notes for GXemul 0.4.7</h2>
+<h2>Release notes for GXemul 0.4.7.1</h2>
 
 <p><i>Copyright (C) 2003-2009  Anders Gavare</i>
 
@@ -46,6 +46,15 @@ and <a href="doc/guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
 	<p>A big thank you goes to Miod Vallat, who sent me physical
 	88100 documentation, via snail mail. This has been invaluable
 	when implementing the 88K emulation mode.
+
+</ul>
+
+<p><br>The changes between release 0.4.7 and 0.4.7.1 are:
+<ul>
+
+  <li>Applying a man page hypenation patch from Jonathan Wiltshire.
+  <li>Minor documentation errors fixed.
+  <li>Some more missing M88K instructions added.
 
 </ul>
 
