NetBSD/hpcmips can now be installed and run using serial console (i.e. without -X), in addition to using the framebuffer.

--- a/gxemul/branches/gxemul-0.4.7/RELEASE.html
+++ b/gxemul/branches/gxemul-0.4.7/RELEASE.html
@@ -55,6 +55,8 @@ and <a href="doc/guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
   <li>Applying a man page hypenation patch from Jonathan Wiltshire.
   <li>Minor documentation errors fixed.
   <li>Some more missing M88K instructions added.
+  <li>NetBSD/hpcmips can now be installed and run using serial
+	console (i.e. without -X), in addition to using the framebuffer.
 
 </ul>
 
