--- a/gxemul/branches/gxemul-0.4.7/RELEASE.html
+++ b/gxemul/branches/gxemul-0.4.7/RELEASE.html
@@ -49,7 +49,7 @@ and <a href="doc/guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
 
 </ul>
 
-<p><br>The changes between release 0.4.7 and 0.4.7.1 are:
+<p><br><b>The changes between release 0.4.7 and 0.4.7.1 are:</b>
 <ul>
 
   <li>Applying a man page hypenation patch from Jonathan Wiltshire.
@@ -60,7 +60,8 @@ and <a href="doc/guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
 
 </ul>
 
-<p>Please read the <a href="HISTORY">HISTORY</a> file for more details.
+
+<p><br>Please read the <a href="HISTORY">HISTORY</a> file for more details.
 
 
 <p><br>Files included in this release are:<pre>
