Documentation updates (NetBSD 5 etc).

--- a/gxemul/branches/gxemul-0.4.7/RELEASE.html
+++ b/gxemul/branches/gxemul-0.4.7/RELEASE.html
@@ -63,9 +63,15 @@ and <a href="doc/guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
 <p><br><b>The changes between release 0.4.7.1 and 0.4.7.2 are:</b>
 <ul>
 
-  <li>HelenOS 0.4.0 has been released, and the guest OS page has been
-  	updated to reflect this.
-
+  <li><a href="http://www.netbsd.org/">NetBSD</a> 5.0,
+	<a href="http://www.openbsd.org/">OpenBSD</a> 4.5, and
+  	<a href="http://www.helenos.org/">HelenOS</a> 0.4.0 have been released,
+  	and the guest OS page has been updated to reflect this. (Not all
+  	versions and architectures work; the versions listed on the
+  	guest OS page are the latest ones that work.)
+  <li>A bug has been fixed which prevented configuration files from being used.
+  <li><b>TODO: MORE!</b>
+  
 </ul>
 
 
